maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:7: warning: enclosing method garM has result type Unit: return value discarded
def garM(c:Int) { if (aMurD()) {if (estFaceMur()) {gauche();return c+1} else avance()} else {droite();avance();return c-1}
                                                            ^Escaper:7: warning: enclosing method garM has result type Unit: return value discarded
def garM(c:Int) { if (aMurD()) {if (estFaceMur()) {gauche();return c+1} else avance()} else {droite();avance();return c-1}
                                                                                                               ^Escaper:11: error: type mismatch;
 found   : Unit
 required: Int
override def run() {while (getY()!=0) {var c = 0;setDirection(Direction.NORTH);while (!estFaceMur()) {avance()};while (aMurN() && getY() !=0 && c!=0) {c=garM(c)}};while (!estSurBiscuit()) {c=garM(c)};prendBiscuit()} 
                                                                                                                                                             ^Escaper:11: error: not found: value c
override def run() {while (getY()!=0) {var c = 0;setDirection(Direction.NORTH);while (!estFaceMur()) {avance()};while (aMurN() && getY() !=0 && c!=0) {c=garM(c)}};while (!estSurBiscuit()) {c=garM(c)};prendBiscuit()} 
                                                                                                                                                                                             ^